--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,12 @@
 			<artifactId>roboguice</artifactId>
 			<version>2.0</version>
 		</dependency>
+		<!-- <dependency> <groupId>com.squareup</groupId> <artifactId>otto</artifactId> 
+			<version>1.3.3</version> </dependency> -->
 		<dependency>
-			<groupId>com.squareup</groupId>
-			<artifactId>otto</artifactId>
-			<version>1.3.3</version>
+			<groupId>de.greenrobot</groupId>
+			<artifactId>eventbus</artifactId>
+			<version>2.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.j256.ormlite</groupId>
