--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,12 @@
 			<version>2.2.2</version>
 		</dependency>
 		<dependency>
-			<groupId>com.jakewharton</groupId>
-			<artifactId>disklrucache</artifactId>
-			<version>1.3.1</version>
+			<groupId>com.nostra13.universalimageloader</groupId>
+			<artifactId>universal-image-loader</artifactId>
+			<version>1.8.3</version>
 		</dependency>
+		<!-- <dependency> <groupId>com.jakewharton</groupId> <artifactId>disklrucache</artifactId> 
+			<version>1.3.1</version> </dependency> -->
 	</dependencies>
 
 	<build>
