--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -32,16 +32,13 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light" >
-        <activity android:name=".activity.HubActivity" />
-        <activity android:name=".activity.LoginActivity" >
+        <activity android:name=".activity.HubActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <service android:name=".server.ServerInterface" >
-        </service>
+        <service android:name=".server.ServerInterface" />
     </application>
 
 </manifest>
