--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -33,7 +33,9 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.Light" >
+        android:theme="@style/Theme.MAL"
+        >
+        <!-- android:theme="@android:style/Theme.Holo.Light" --> 
         <activity android:name=".activity.HubActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
