--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -26,22 +26,24 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name="MalApplication"
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@style/Theme.MAL"
-        >
-        <!-- android:theme="@android:style/Theme.Holo.Light" --> 
+        android:theme="@style/Theme.MAL" >
+
+        <!-- android:theme="@android:style/Theme.Holo.Light" -->
         <activity android:name=".activity.HubActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.DetailActivity" >
         </activity>
 
         <service android:name=".server.ServerInterface" />
