adding missing bits for manga support

--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -47,6 +47,7 @@
         </activity>
 
         <service android:name=".server.AnimeServerInterface" />
+        <service android:name=".server.MangaServerInterface" />
 
         <receiver android:name=".server.BootReciever" >
             <intent-filter>
