--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -31,12 +31,13 @@
     <application
         android:name="MalApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/Theme.MAL" >
 
         <!-- android:theme="@android:style/Theme.Holo.Light" -->
-        <activity android:name=".activity.HubActivity"> 
+        <activity android:name=".activity.HubActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
